# aaa-build-engineering

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  ROADMAP_NEXT.md  ROLE_NOTES.md  SEEDS.md  SKILLS_ROADMAP.md
accel/: README.md  REPORT.md  lessons-learned.md
accel/samples/bench/: README.md  heavy.h  pch.h
accel/samples/bgfx/: README.md  vendored.lock.json
accel/samples/fbuild/: README.md  fbuild.bff
accel/samples/hello/: hello.cpp
accel/samples/link/: README.md
accel/samples/mp-demo/: README.md
accel/scripts/: activate-msvc.ps1  bench-bgfx.ps1  bench-link.ps1  bench.ps1  demo-fbuild.ps1  demo-mp.ps1  setup-bgfx.ps1  smoke-build.ps1
accel/tools/fastbuild/: README.md
ci/: .env  .gitignore  README.md  docker-compose.yml  lessons-learned.md
ci/agent/: Dockerfile
ci/samples/hoops-brawl-seed/: README.md
ci/samples/hoops-brawl-seed/stream/: CMakeLists.txt  README.md
ci/samples/hoops-brawl-seed/stream/Code/: CMakeLists.txt  Main.cpp  Shotmeter.cpp  Shotmeter.h
ci/samples/hoops-brawl-seed/stream/Data/: Intro.txt  Strings.txt
ci/samples/hoops-brawl-seed/stream/Tests/: CMakeLists.txt  ShotmeterTests.cpp
ci/samples/hoops-brawl-seed/stream/Tools/Cooker/: CMakeLists.txt  Cooker.cpp
ci/scripts/: bench-agents.ps1  bootstrap-builds.ps1  bootstrap-lyra.ps1  demo-vcs-trigger.ps1  notify-build-failure.ps1  setup-vcs-trigger.ps1
dashboard/: README.md  dashboard.html
dashboard/data/: snapshot.fixture.json  snapshot.json
dashboard/scripts/: build-dashboard.ps1  collect-metrics.ps1  seed-build-history.ps1
dashboard/tests/: _assert.ps1  build-dashboard.Tests.ps1  collect-metrics.Tests.ps1
docs/superpowers/plans/: 2026-06-03-vcs-trigger.md  2026-06-04-dashboard.md  2026-06-04-vcs-root-creation.md
docs/superpowers/specs/: 2026-06-03-vcs-trigger-design.md  2026-06-04-dashboard-design.md  2026-06-04-vcs-root-creation-design.md
perforce/: README.md  depot-layout.md  lessons-learned.md
perforce/broker/: README.md  p4broker.conf  start-broker.ps1  stop-broker.ps1
perforce/proxy/: README.md  demo-proxy.ps1  start-p4p.ps1  stop-p4p.ps1
perforce/scripts/: start-p4d.ps1  stop-p4d.ps1
perforce/tools/: README.md  janitor.ps1  stale_cl_janitor.py
perforce/triggers/: README.md  demo-validate-submit.ps1  deploy.ps1  notify-teamcity.ps1  require-engine-tag.py  validate-submit.py
unreal/: README.md  lessons-learned.md
unreal/buildgraph/: lyra-pipeline.xml
unreal/horde/: README.md
unreal/horde/config/: aaa.project.json  agent-appsettings.User.json  game-main.stream.json  globals.json
unreal/scripts/: _unreal-common.ps1  buildgraph-lyra.ps1  check-prereqs.ps1  compile-lyra.ps1  cook-lyra.ps1  package-lyra.ps1  stamp-lyra-package.ps1
